Background alignment correction

--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,13 @@
     background-image: url(../css/imagesbmi/bgimage.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    
+    padding: 170px 0px;
 }
 .box{
     width: 450px;
     height: 280px;
     background-color: cornsilk;
-    margin-left: 31%;
-    margin-top: 13%;
-    padding: 0%;
+    margin-left: 30%;
     border-radius: 30px;
     display: flex;
     justify-items: center;
